LMS Introduction à l'algorithmique avec le langage python - exercice 2.10

--- a/intro_algo_avec_python.ipynb
+++ b/intro_algo_avec_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN86iFQHp/fJLiAOocR0PYS"
+      "authorship_tag": "ABX9TyNpn4GNudNw2pApZl03Mn5H"
     },
     "kernelspec": {
       "name": "python3",
@@ -674,6 +674,104 @@
       ],
       "metadata": {
         "id": "GJHbZFhjoOSu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```\n",
+        "LIRE(matrice1)\n",
+        "LIRE(matrice2)\n",
+        "produit_matrices = []\n",
+        "\n",
+        "POUR CHAQUE ligne DE produit_matrices\n",
+        "    POUR CHAQUE colonne DE ligne\n",
+        "        POUR CHAQUE element DE colonne\n",
+        "            produit_matrices[ligne][colonne] += matrice1[ligne][element] * matrice2[element][colonne]\n",
+        "        FIN POUR\n",
+        "    FIN POUR\n",
+        "FIN POUR\n",
+        "AFFICHE(produit_matrices)\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "zBU_3nKkDHoq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"matrice1 = [\n",
+        "    [1, 2],\n",
+        "    [3, 4]\n",
+        "]\n",
+        "matrice2 = [\n",
+        "    [5, 6],\n",
+        "    [7, 8]\n",
+        "]\"\"\"\n",
+        "matrice1 = [\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "]\n",
+        "matrice2 = [\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "]\n",
+        "\n",
+        "if len(matrice1) == len(matrice2) & len(matrice1[0]) == len(matrice2[0]) :\n",
+        "    produit = [ [ 0 for x in range(len(matrice1[0])) ] for y in range(len(matrice1)) ]\n",
+        "    #print(produit)\n",
+        "\n",
+        "    for i in range(len(produit)) :\n",
+        "        for j in range(len(produit[i])) :\n",
+        "            for k in range(len(produit[j])) :\n",
+        "                #print('i={}, j={}, k={}'.format(i, j, k))\n",
+        "                produit[i][j] += matrice1[i][k] * matrice2[k][j]\n",
+        "\n",
+        "print('Produit des deux matrices = {}'.format(produit))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oSrfRIGAYwnr",
+        "outputId": "3468dfea-c44c-42f7-c870-9f4ac6f8430d"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Produit des deux matrices = [[30, 36, 42], [66, 81, 96], [102, 126, 150]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.11 Suite de Fibonacci\n",
+        "\n",
+        "La suite de Fibonacci est définit récursivement par F0 = 0 , F1 = 1 et Fn+2 =\n",
+        "Fn+1 +Fn pour n >= 0. Ecrire une fonction FIBO(n) qui implémente la formule\n",
+        "ci-dessus."
+      ],
+      "metadata": {
+        "id": "s7V5WLiDg9JG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```\n",
+        "# Ce texte est au format code\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "4S0qCK4yhJ6r"
       }
     }
   ]
