LMS Introduction à l'algorithmique avec le langage python - exercices 2.11 à 2.12

--- a/intro_algo_avec_python.ipynb
+++ b/intro_algo_avec_python.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNpn4GNudNw2pApZl03Mn5H"
+      "authorship_tag": "ABX9TyP/4IYlc7p19saWTU4qTAgt"
     },
     "kernelspec": {
       "name": "python3",
@@ -39,7 +39,7 @@
         "tarif1 = 3 * nombre_entrée\n",
         "tarif2 = 9 + nombre_entrée\n",
         "\n",
-        "SI tarif1<tarif2\n",
+        "SI tarif1 < tarif2\n",
         "    AFFICHE(\"Le tarif 1 est moins cher\")\n",
         "SINON\n",
         "    AFFICHE(\"Le tarif 2 est moins cher\")\n",
@@ -514,7 +514,7 @@
         },
         "outputId": "48524db5-0ff3-4c68-c056-c83b524126a5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,7 +585,7 @@
         "id": "IYruDld_iw0A",
         "outputId": "abe2e95a-eaa4-43ba-99dd-7e2154ee37c7"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,7 +651,7 @@
         "id": "M9PRDo30nl5u",
         "outputId": "ecda33c7-211e-4fa7-8ccf-091951de00c2"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,7 +739,7 @@
         "id": "oSrfRIGAYwnr",
         "outputId": "3468dfea-c44c-42f7-c870-9f4ac6f8430d"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,12 +767,126 @@
       "cell_type": "markdown",
       "source": [
         "```\n",
-        "# Ce texte est au format code\n",
+        "FONCTION fibo(n) : \n",
+        "    DEBUT\n",
+        "        SI n = 0\n",
+        "            RETOURNE 0\n",
+        "        SINON SI n = 1\n",
+        "            RETOURNE 1\n",
+        "        SINON\n",
+        "            RETOURNE (fibo(n-1) + fibo(n-2))\n",
+        "    FIN\n",
+        "\n",
+        "LIRE(n)\n",
+        "AFFICHE(somme)\n",
         "```"
       ],
       "metadata": {
         "id": "4S0qCK4yhJ6r"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibo(n:int) -> int:\n",
+        "    if n == 0:\n",
+        "        return 0\n",
+        "    elif n == 1:\n",
+        "        return 1\n",
+        "    else:\n",
+        "        return (fibo(n-1) + fibo(n-2))\n",
+        "\n",
+        "n = int(input('Saisir un nombre : '))\n",
+        "print(fibo(n))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XQYgZfL2Vqok",
+        "outputId": "3679f40f-dde4-4992-a953-e3cf72b5de7d"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saisir un nombre : 10\n",
+            "55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.12 Le temps d'arrêt\n",
+        "\n",
+        "On note Hn la somme Hn =\n",
+        "Pn\n",
+        "k=1\n",
+        "1\n",
+        "k . On admet que H tend vers +1. Ecrire\n",
+        "un algorithme qui détermine le plus petit entier n tel que (H) dépasse un réel\n",
+        "α donné."
+      ],
+      "metadata": {
+        "id": "RXfsxWXeYb0Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```\n",
+        "LIRE(a)\n",
+        "n = 0\n",
+        "somme = 0\n",
+        "\n",
+        "TANT QUE somme <= a\n",
+        "    n += 1\n",
+        "    somme += 1/n\n",
+        "FIN TANT QUE\n",
+        "AFFICHE n\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "meKtc9q7bEXA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = int(input('Saisir un nombre : '))\n",
+        "n = 0\n",
+        "somme = 0\n",
+        "\n",
+        "while somme <= a:\n",
+        "    n += 1\n",
+        "    #print('n :',n)\n",
+        "    somme += 1/n\n",
+        "    #print('somme :',somme)\n",
+        "\n",
+        "print('Pour dépasser a = {}, H(n)= {} quand n = {}'.format(a, somme, n))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9-SGcAHNdAdQ",
+        "outputId": "8a579579-64b1-4c07-ae5f-c0aa111cfa70"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saisir un nombre : 3\n",
+            "Pour dépasser a = 3, H(n)= 3.0198773448773446 quand n = 11\n"
+          ]
+        }
+      ]
     }
   ]
 }
